--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -1,29 +1,13 @@
-
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
-    <link rel="icon" href="https://secure-media.hotstar.com/web-assets/prod/D+H_favicon.ico">
-
-    <link rel="stylesheet" href="../src/App.css" />
-    <link rel="stylesheet" href="../src/index.css" />
-    <link rel="stylesheet" href="../dist/output.css" />
-
-
-
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
-    <title>disney-clone</title>   
+    <meta charset="UTF-8" />
+    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Vite + React</title>
   </head>
   <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
-    
     <div id="root"></div>
-    <script type="module" src="/src/index.jsx"></script>
-
+    <script type="module" src="/Frontend/src/index.jsx"></script>
   </body>
 </html>
